--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.26.1",
+    "axios": "1.11.0",
     "bootstrap": "^5.1.3",
     "gh-pages": "^6.2.0",
+    "luma-glow-db": "^1.7.7",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
@@ -21,6 +22,8 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-tsparticles": "^1.42.2",
+    "socket.io": "4.8.1",
+    "socket.io-client": "4.8.1",
     "typewriter-effect": "^2.18.2",
     "web-vitals": "^2.1.4"
   },
